style.css
  @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300&family=Old+Standard+TT:wght@700&family=Poppins:wght@300;400;500;600&display=swap');


*{                /* this is a universal selector for all html elements*/
    margin:0%;    /* for space around all elements*/
    padding:0%;   /*space blw content and border*/
}

body {
    font-family: 'Poppins', sans-serif;
}

html{
    scroll-behavior: smooth;  /* for smooth scrolling transition */
}

p{          /* paragraph formatting*/
   color:rgb(85, 85, 85);
   
}

/* TRANSITION */

a, .btn {
    transition:  300ms ease;
}

/* Desktop Navigation links */
nav,               /* from index html for navigation */
.nav-links{
    display:flex;      /* dispaly prop tells how things are arranged */
   
}

nav {                                /*contents in the nav */
    justify-content:space-around;
    align-items:center;
    height: 17vh;       /* from the whole screen this takes 17% */
}

.nav-links{
    gap: 1.5rem;          /* blw elements which are flexed */
    list-style: none;
    font-size:1rem;
}

a{                          /* text decoration for text/links in navbar */
    color: black;
    text-decoration: none;
    text-decoration-color:white;
}

a:hover{                            /* while hovering over nav links */
    color:grey;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color:rgb(185, 185, 185)       /* text underline space while hover */ 
}

.logo{                      /* Viknesh SRV text changes */
    font-size: 2rem;
}

.logo:hover{                  /* hovering over logo nave viknesh SRV */
    cursor:default ;         /* cursor will not change to text hover */
}


/* Hamburger nav   */

#hamburger-nav{
    display: none;                    /* in desktop view it wont shows up */
}

.hamburger-menu{
    position: relative;
    display:inline-block;
}

.hamburger-icon{
    display: flex;                        /* from one direction to another direction arrangement of blocks usually from left to right*/
    flex-direction: column;               /* the flex direction */
    justify-content: space-between;       /*content justification */
    height:24px;
    width:30px;
    cursor:pointer;                       /* the cursor will be turned to pointer form */
}

.hamburger-icon span{                               /* lines of the hamburger   . */
    width: 100%;
    height:2px;
    background-color: black;
    transition: all 0.3 ease-in-out;           /*specifies a transition effect with a slow start and end */
}

.menu-links{
    position: absolute;                       
    top:100%;
    right:0;
    background-color: white;                             
    width:fit-content;
    max-height:0;                                         /* The overflow property specifies whether to clip the content or to add scrollbars when the content of an element is too big to fit in the specified area */                           
    overflow:hidden;                                   /* The overflow is clipped, and the rest of the content will be invisible */
    transition: all 0.3 ease-in-out;
}


.menu-links a {                                        /* each link within menu-links */
    display: block;
    padding:10px;
    text-align:center;
    font-size:1.5rem;
    color:black;
    text-decoration: none;
    transition: all 0.3 ease-in-out;
}


.menu-links li{                                        /* list elemnts inside menu - links */
     list-style: none;                                         /* Sets all the properties for a list in one declaration */
}

.menu-links.open{                                           /* adding class from js */
    max-height:300px;
}

.hamburger-icon.open span:first-child{                             /* represents the first element among a group of sibling elements. */
    transform: rotate(45deg) translate( 10px, 5px);          /* transofrming line and rotate to a skewd postion and move them in certain direction */
}

.hamburger-icon.open span:nth-child(2){                             /* represents the first element among a group of sibling elements. */
    opacity:0;                                               /*removing the second line completely */
}

.hamburger-icon.open span:last-child{                             /* represents the first element among a group of sibling elements. */
    transform: rotate(-45deg) translate( 10px, -5px);          /* transofrming line and rotate to a skewd postion and move them in certain direction */
}

.hamburger-icon span:first-child{
    transform: none;
}

.hamburger-icon span:first-child{
    opacity:1;
}

.hamburger-icon span:first-child{
    transform: none;
}

/* SECTIONS */

 section {
    padding-top: 5vh;
    height:96vh;
    margin:0 10rem;
    box-sizing: border-box;
    min-height:fit-content;
}

.section-conatiner{
    display: flex;
}

/* PROFILE SECTION */

#profile {
    display:flex;
    justify-content: center;
    gap: 5rem;
    height: 70vh;
}

.section__pic-container{
    display:flex;
    height:380px;
    width:380px;
    margin:auto 0;
}

.section__text{
    align-self:center;
    text-align:center;
}

.section__text p{
    font-weight: 500;
}

.section__text__p1{
    text-align:center;
}

.section__text__p1 {
    font-size: 1.6rem;
    margin-bottom: 0.5rem;
}
.section__text__p2{
    font-size: 2.2rem;
}

.section__text__p2{
    text-align: justify;
}

.title{
    font-size:3rem;
    text-align:center;
}

#social-container{
    display:flex;
    justify-content:center;
    margin-top: 2rem;
    gap:1rem;
}

/* ICONS */

.icon{
    cursor:pointer;
    height:2rem;
 }

 /* BUTTON */

 .btn-container{
    display:flex;
    justify-content: center;
    gap:5rem;
}

.btn{
    font-weight: 600;
    transition:all 300ms ease;
    padding:1rem;
    width:8rem;
    border-radius:2rem;
}

.btn-color-1,
.btn-color-2{
    border:rgb(255,255,255)0.1rem solid;
}

.btn-color-1:hover,
.btn-color-2:hover{
    cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover{
    background: rgb(0,0,0);
    color:white;
}

.btn-color-1:hover{
    background: rgb(255,255,255)0.1rem solid;
    
}

.btn-color-2{
    background:none;
}

.btn-color-2:hover{
    border:rgb(255,255,255).0.1rem solid;
}

.btn-container{
    gap:1rem;
}

